modified companyName to Kinetic Data, user the actual username in the content header

--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -4,6 +4,6 @@
     NOTE: This file is required.
 --%>
 <%
-    bundle.setProperty("companyName", "Sithco");
+    bundle.setProperty("companyName", "Kinetic Data");
     bundle.setProperty("catalogName", customerRequest.catalogName());
 %>
