--- a/packages/base/resources/css/login.css
+++ b/packages/base/resources/css/login.css
@@ -10,7 +10,7 @@
     width: 500px;
 }
 #loginBox #loginForm {
-    padding: 5px;
+    margin: 50px 0 0 25px;
 }
 #loginBox #loginForm .field {
     margin-top: 10px;
