--- a/packages/base/resources/css/login.css
+++ b/packages/base/resources/css/login.css
@@ -1,7 +1,7 @@
 #contentBody {
     text-align: center;
 }
-#loginBox {
+#contentBody #loginBox {
     background-color: #FFFFFF;
     border: 1px solid #3B6E9C;
     height: 250px;
@@ -9,25 +9,29 @@
     text-align: left;
     width: 500px;
 }
-#loginBox #loginForm {
+#contentBody #loginBox #loginForm {
     margin: 50px 0 0 25px;
 }
-#loginBox #loginForm .field {
+#contentBody #loginBox #loginForm .field {
     margin-top: 10px;
 }
-#loginBox #loginForm .field .label {
+#contentBody #loginBox #loginForm .field .label {
     color: #333333;
     float: left;
     font-weight: bold;
     width: 150px;
 }
-#loginBox #loginForm .field .value {
+#contentBody #loginBox #loginForm .field .value {
     margin-left: 150px;
 }
-#loginBox #loginForm #loginFormFooter {
+#contentBody #loginBox #loginForm #loginFormFooter {
     margin-top: 10px;
 }
-#loginBox .title {
+#contentBody #loginBox .message {
+    color: #FF0000;
+    padding: 5px;
+}
+#contentBody #loginBox .title {
     background: #88A7C3 url('../../../../common/resources/images/background_blue_3B6E9C_88A7C3.png') repeat-x;
     border-bottom: 1px solid #3B6E9C;
     color: #FFFFFF;
@@ -35,7 +39,7 @@
     line-height: 26px;
     padding: 0 5px;
 }
-#loginBox:hover .title {
+#contentBody #loginBox:hover .title {
     background: #A0B9CE url('../../../../common/resources/images/background_light_blue_628BAF_A0B9CE.png') repeat-x;
 }
 #contentHeader .userInfo {
