--- a/packages/base/config/config.jspf
+++ b/packages/base/config/config.jspf
@@ -1,10 +1,8 @@
 <%-- TODO: Describe. --%>
 <%-- Set the values of the themes configurable settings. --%>
 <%
-    bundle.setProperty("companyName", "ACME");
-
     // If null, will use the catalog's default logout action
-    bundle.setProperty("defaultLoginAction", packageHelper.templateNameUrl("LoremPortal"));
+    bundle.setProperty("defaultLoginAction", pathHelper.templateNameUrl("LoremPortal"));
     // If null, the forgot password link on the login page will not be displayed
     bundle.setProperty("forgotPasswordAction", "http://www.kineticdata.com");
 %>
