--- a/packages/base/resources/css/display.css
+++ b/packages/base/resources/css/display.css
@@ -9,8 +9,10 @@ textarea {
 .questionLabel {
     color: #333333;
     float: left;
-    font-weight: bold;
     width: 200px;
+}
+.preRequiredLabel {
+    font-weight: bold;
 }
 .questionAnswer {
     margin-left: 200px;
@@ -50,4 +52,29 @@ textarea {
     color: #616161;
     margin-top: 10px;
     padding: 5px;
+}
+
+/*
+ * Styles for the table panel displayed for set fields external events
+*/
+table.resultsTableAdv {
+    border-collapse: collapse;
+    margin-top: 10px;
+}
+table.resultsTableAdv td {
+    border-bottom: 1px solid #A0A0A0;
+}
+table.resultsTableAdv tr#headerRow {
+    color: #3B6E9C;
+    text-align: left;
+}
+table.resultsTableAdv tr.row_odd {
+    background: #FFFFFF;
+}
+table.resultsTableAdv tr.row_even {
+    background: #F6F6F6;
+}
+table.resultsTableAdv tr.resultsTableHover {
+    background: #E0E0FF;
+    cursor: pointer;
 }
