added style property for search results error messages

--- a/packages/catalog/resources/css/catalog.css
+++ b/packages/catalog/resources/css/catalog.css
@@ -62,6 +62,12 @@
 #searchResults {
     display: none;
 }
+#searchResults .message {
+    color: #FF0000;
+    font-size: 15px;
+    line-height: 150px;
+    padding: 5px;
+}
 #searchResults .highlighted {
     background: #CCFF00;
 }
