image in header and login link in header are now active links (see enhancement #1913)

--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -6,4 +6,8 @@
 <%
     bundle.setProperty("companyName", "Kinetic Data");
     bundle.setProperty("catalogName", customerRequest.catalogName());
+
+    bundle.setProperty("homeUrl", bundle.applicationPath() + "DisplayPage?name=LoremPortal");
+    bundle.setProperty("loginUrl", bundle.applicationPath() + "DisplayPage?name=LoremLogin");
+    bundle.setProperty("logoutUrl", "KSAuthenticationServlet?Logout=true");
 %>
