--- a/common/interface/fragments/contentHeader.jspf
+++ b/common/interface/fragments/contentHeader.jspf
@@ -1,9 +1,14 @@
 <div id="contentHeader">
-    <img class="logo" src="<%= bundle.bundlePath()%>common/resources/images/Kinetic Data.gif"></img>
+    <a href="<%= bundle.getProperty("homeUrl")%>">
+        <img class="logo" src="<%= bundle.bundlePath()%>common/resources/images/Kinetic Data.gif"></img>
+    </a>
     <% if (context != null) {%>
-    <div class="userInfo">logged in as <a href="javascript:void(0)"><%= context.getUserName()%></a> | <a href="KSAuthenticationServlet?Logout=true">logout</a></div>
+    <div class="userInfo">
+        logged in as <a href="javascript:void(0)"><%= context.getUserName()%></a> | 
+        <a href="<%= bundle.getProperty("logoutUrl")%>">logout</a>
+    </div>
     <% } else {%>
-    <div class="userInfo">not logged in | <a href="javascript:void(0)">login</a></div>
+    <div class="userInfo">not logged in | <a href="<%= bundle.getProperty("loginUrl")%>">login</a></div>
     <% }%>
     <div class="clear"></div>
 </div>
