--- a/common/config/config.jspf
+++ b/common/config/config.jspf
@@ -10,4 +10,7 @@
     bundle.setProperty("homeUrl", bundle.applicationPath() + "DisplayPage?name=LoremPortal");
     bundle.setProperty("loginUrl", bundle.applicationPath() + "DisplayPage?name=LoremLogin");
     bundle.setProperty("logoutUrl", "KSAuthenticationServlet?Logout=true");
+
+    // This is a path to the review jsp to be used by review request.
+    bundle.setProperty("reviewJsp", "klean/packages/base/review.jsp");
 %>
