--- a/core/framework/helpers/DateHelper.jspf
+++ b/core/framework/helpers/DateHelper.jspf
@@ -1,15 +1,34 @@
 <%@page import="java.text.*,java.util.*"%>
 <%!
     /**
-     * TODO: Document.
+     * Helpers are essentially Java classes that can be used in JSP pages.  The 
+     * DateHelper is a core helper (meaning that it rarely, if ever be 
+     * modified).  It includes helper methods for working with Dates.
      */
     public static class DateHelper {
+    
+        // popular US date format
         public static final String DATE_FORMAT_SIMPLE = "MM/dd/yyyy HH:mm:ss";
 
+        // English month abbreviations
         public static final String[] MONTH_ABBREVIATIONS = new String[] {
             "Jan","Feb","Mar","Apr","May","Jun","Jul","Aug","Sep","Oct","Nov","Dec"
         };
 
+        /**
+         * Returns a date string formatted for the specified locale.  The format
+         * of the input dateString is expected to be "MM/dd/yyyy HH:mm:ss".
+         * 
+         * @param String
+         * @param java.net.Locale
+         * @returns String
+         *
+         * Example - format a US date for an Australia user
+         *     String usDate = "02/22/1971 14:04:00";
+         *     java.util.Locale australia = new java.util.Locale("en", "AU");
+         *     String auDate = DateHelper.formatDate(usDate, australia);
+         *     // auDate => 22/02/1971 2:04:00 PM
+         */
         public static String formatDate(String dateString, Locale locale) {
             String result = null;
             try {
@@ -23,6 +42,10 @@
             return result;
         }
 
+        /**
+         * Returns the current four digit year value as a string.
+         * @returns String
+         */
         public static String getCurrentYear() {
             java.util.Calendar calendar = java.util.Calendar.getInstance();
             int year = calendar.get(java.util.Calendar.YEAR);
