--- a/core/framework/helpers/ResponseHelper.jspf
+++ b/core/framework/helpers/ResponseHelper.jspf
@@ -14,9 +14,13 @@
         }
 
         public static void sendUnauthorizedResponse(HttpServletResponse response) throws IOException {
+            sendUnauthorizedResponse(response, "Please log in.");
+        }
+
+        public static void sendUnauthorizedResponse(HttpServletResponse response, String responseBody) throws IOException {
             response.setStatus(response.SC_UNAUTHORIZED);
             response.setHeader("X-KD-ErrorMessage", "Please log in.");
-            response.getWriter().write("Please log in.");
+            response.getWriter().write(responseBody);
         }
     }
 %>
